[PP-5]Update top navigation font & title width to prevent shifting

--- a/src/scss/common/variables.scss
+++ b/src/scss/common/variables.scss
@@ -5,6 +5,7 @@ $body-color: #000000;
 
 // Font family
 $font-family-sans-serif: "Open Sans", sans-serif;
+$font-family-sans-serif-secondary: "usual", sans-serif;
 
 // Base colours
 $primary: #ea7425;
@@ -18,3 +19,7 @@ $input-bg: #ffffff;
 
 // Misc
 $btn-add-row: #5b6972;
+
+// Form badge
+$complete: #5ea01c;
+
